--- a/lecture-1/src-code/register.html
+++ b/lecture-1/src-code/register.html
@@ -18,7 +18,7 @@
         <option value="MA">MA</option>
         </select>
         <br>
-        <input type="submit" name="submit" value="Register!!!">
+        <input type="submit"  value="Register!!!">
       </form>
     </div>
   </body>
